tests/ui/error-codes/E0449.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/E0449.rs:7:1
   |
LL | pub impl Bar {}
   | ^^^
   |
   = note: place qualifiers on individual impl items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/E0449.rs:9:1
   |
LL | pub impl Foo for Bar {
   | ^^^
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/E0449.rs:10:5
   |
LL |     pub fn foo() {}
   |     ^^^
   |
   = note: trait items always share the visibility of their trait

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0449`.
